# fl2xui

./: .gitignore  404.html  README.md  index.html  index.md~  meson.build  sitemap.xml
assets/: pdf.css
data/: fl2xui.blp  fl2xui.desktop  fl2xui.gresource.xml  fl2xui.ui  meson.build  org.stronnag.fl2xui.desktop
docs/: mkdocs.yml  mkpdf.sh
docs/docs/: index.md
meson/: meson.build  post_install.sh
search/: search_index.json
src/: combo.vala  fl2xui-config.h.in  fl2xui.vala  meson.build  prefs.vala  process.vala  scrollview.vala  winproc.c  winres.rc  winspawn.vala
src/vapi/: fl2xui.vapi
